--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,3 +1,4 @@
+$color-background-white: white;
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -7,8 +8,9 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 .75rem 1.5rem;
-  background-position: center;
-  background-size: cover;
+  position: relative;
+  overflow: hidden;
+
 
   &.large {
     height: 380px;
@@ -32,6 +34,10 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: $color-background-white;
+    opacity: 0.7;
+    font-family: 'Montserrat Subrayada', sans-serif;
+    position: absolute;
 
     .title {
       font-weight: bold;
@@ -43,6 +49,24 @@
     .sub-title {
       font-size: 1.6rem;
       font-weight: lighter;
+    }
+
+  }
+
+  .background-image {
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+
+  }
+
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
   }
 }
