--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,22 @@
-*,*:before,*:after{
+*, *:before, *:after {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
+  padding: 2rem 6rem;
 }
-html{
+
+html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
