changing styles :star:

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
-  padding: 2rem 6rem;
+  padding: 2% 6%;
 }
 
 html {
