--- a/src/components/PreviewCollection/PreviewCollection.styles.scss
+++ b/src/components/PreviewCollection/PreviewCollection.styles.scss
@@ -10,7 +10,8 @@
   }
 
   .preview {
-display: flex;
-    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
