--- a/src/components/collection-item/CollectionItem.styles.scss
+++ b/src/components/collection-item/CollectionItem.styles.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   height: 35rem;
   width: 22%;
+  min-width: 250px;
   align-items: center;
 
   .image {
@@ -19,6 +20,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 1.8rem;
+    margin-bottom: 30px;
 
     .name {
       width: 90%;
