--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,6 +1,6 @@
 $color-background-white: white;
 .menu-item {
-  min-width: 30%;
+  min-width: 350px;
   height: 240px;
   flex: 1 1 auto;
   display: flex;
