--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
   padding: 2% 6%;
+
+  a{
+    text-decoration:none;
+    color:black;
+  }
 }
 
 html {
