--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -20,7 +20,8 @@
     align-items: center;
     justify-content: flex-end;
     .option{
-      padding:10px 15px
+      padding:10px 15px;
+      cursor:pointer
     }
   }
 
