--- a/src/components/custom-button/CustomButton.styless.scss
+++ b/src/components/custom-button/CustomButton.styless.scss
@@ -1,4 +1,4 @@
-.custom-button{
+.custom-button {
   min-width: 16.5rem;
   width: auto;
   height: 5rem;
@@ -17,5 +17,15 @@
     background-color: white;
     color: black;
     border: 0.1rem solid black;
+  }
+
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: white;
+
+    &:hover{
+      background-color: #357ae8;
+      border:none;
+    }
   }
 }
