--- a/src/components/sign-in/SignIn.styles.scss
+++ b/src/components/sign-in/SignIn.styles.scss
@@ -1,8 +1,12 @@
 .sign-in{
-  width: 30vw;
+  width: 40vw;
   display: flex;
   flex-direction: column;
 
+  .buttons{
+    display: flex;
+    justify-content: space-between;
+  }
   .title{
     margin:10px 0;
   }
