--- a/src/components/collection-item/CollectionItem.styles.scss
+++ b/src/components/collection-item/CollectionItem.styles.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 35rem;
-  width: 22%;
-  min-width: 250px;
+  width: 22vw;
   align-items: center;
   position: relative;
 
