--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,13 @@
     margin-left: auto;
     font-size: 36px;
   }
+  .test-warning{
+    color: red;
+    text-align: center;
+    font-size: 2.4rem;
+  }
+  button{
+    margin-left: auto;
+    margin-top: 5rem;
+  }
 }
